Add Slack notifications for builds

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,3 +14,8 @@ publish:
     email: $$DOCKER_EMAIL
     password: $$DOCKER_PASSWORD
     repo: armhfbuild/letsencrypt-nginx-proxy-companion
+
+notify:
+  slack:
+    webhook_url: $$SLACK_WEBHOOK_URL
+    channel: armhf
